test dawn build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ option(HAVE_WEBGPU "use webgpy flag" ON)
 option(WITH_WEBGPU "Flag" ON)
 if(HAVE_WEBGPU OR WITH_WEBGPU)
   # include(cmake/OpenCVDetectVulkan.cmake)
-  set(WEBGPU_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include CACHE PATH WEBGPU include directory)
-  set(WEBGPU_LIBRARIES ${PROJECT_SOURCE_DIR}/lib)
+  set(WEBGPU_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
+  set(WEBGPU_LIBRARIES "${PROJECT_SOURCE_DIR}/lib")
 endif()
 
 add_executable(WEBGPU test.cpp)
@@ -15,17 +15,17 @@ add_executable(WEBGPU test.cpp)
 # include_directories(${WEBGPU_INCLUDE_DIRS}/dawn)
 # link_directories(WEBGPU  ${WEBGPU_INCLUDE_DIRS}/dawn
 #                                ${WEBGPU_INCLUDE_DIRS}/dawn)
-target_link_directories(WEBGPU PUBLIC 
-                            ${WEBGPU_INCLUDE_DIRS}/dawn
-                            ${WEBGPU_INCLUDE_DIRS}/dawn)
-target_link_libraries(WEBGPU  ${WEBGPU_LIBRARIES}/libdawn_proc.so
-                                    ${WEBGPU_LIBRARIES}/libdawn_native.so)
+target_link_directories(WEBGPU PUBLIC "${WEBGPU_INCLUDE_DIRS}/dawn/dawn_proc.h"
+                            PUBLIC "${WEBGPU_INCLUDE_DIRS}/dawn/webgpu_cpp.h")
+target_link_libraries(WEBGPU  "${WEBGPU_LIBRARIES}/libdawn_proc.so"
+                                    "${WEBGPU_LIBRARIES}/libdawn_native.so")
 
-# try_compile(VALID_DAWN
-#       ${WEBGPU_LIBRARIES}
-#       ${PROJECT_SOURCE_DIR}/test.cpp
-#       )
-# if(NOT ${VALID_DAWN})
-#   message(WARNING "Can't use Dawn")
-#   return()
-# endif()
+try_compile(VALID_DAWN
+      ${WEBGPU_LIBRARIES}
+      ${PROJECT_SOURCE_DIR}/test.cpp
+      )
+if(NOT ${VALID_DAWN})
+message(WARNING "${WEBGPU_INCLUDE_DIRS}")
+  message(WARNING "Can't use Dawn")
+  return()
+endif()
