Add webgpu_cpp file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,20 +10,9 @@ if(HAVE_WEBGPU OR WITH_WEBGPU)
   set(WEBGPU_LIBRARIES "${PROJECT_SOURCE_DIR}/lib")
 endif()
 
-add_executable(WEBGPU test.cpp)
+add_executable(WEBGPU test.cpp webgpu_cpp.cpp)
 set_property(TARGET WEBGPU PROPERTY CXX_STANDARD 11)
 include_directories(${WEBGPU_INCLUDE_DIRS})
-# link_directories(WEBGPU  ${WEBGPU_INCLUDE_DIRS}/dawn
-#                                ${WEBGPU_INCLUDE_DIRS}/dawn)
 target_include_directories(WEBGPU PUBLIC ${WEBGPU_INCLUDE_DIRS})
 target_link_directories(WEBGPU PUBLIC ${WEBGPU_LIBRARIES})
-target_link_libraries(WEBGPU dawn_proc dawn_native)
-
-try_compile(VALID_DAWN
-      ${WEBGPU_LIBRARIES}
-      ${PROJECT_SOURCE_DIR}/test.cpp
-      )
-if(NOT ${VALID_DAWN})
-  message(WARNING "Can't use Dawn")
-  return()
-endif()
+target_link_libraries(WEBGPU PUBLIC dawn_proc dawn_native dawn_wire )
