dawn build test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,20 @@ if(HAVE_WEBGPU OR WITH_WEBGPU)
   set(WEBGPU_LIBRARIES "${PROJECT_SOURCE_DIR}/lib")
 endif()
 
-add_executable(WEBGPU test.cpp webgpu_cpp.cpp)
+add_executable(WEBGPU test.cpp ${PROJECT_SOURCE_DIR}/lib/webgpu_cpp.cpp)
 set_property(TARGET WEBGPU PROPERTY CXX_STANDARD 11)
 include_directories(${WEBGPU_INCLUDE_DIRS})
-target_include_directories(WEBGPU PUBLIC ${WEBGPU_INCLUDE_DIRS})
+# target_include_directories(WEBGPU PUBLIC ${WEBGPU_INCLUDE_DIRS})
 target_link_directories(WEBGPU PUBLIC ${WEBGPU_LIBRARIES})
 target_link_libraries(WEBGPU PUBLIC dawn_proc dawn_native dawn_wire )
+
+try_compile(VALID_WEBGPU
+      "${PROJECT_SOURCE_DIR}/lib"
+      "${PROJECT_SOURCE_DIR}/test.cpp"
+      CMAKE_FLAGS "-DINCLUDE_DIRECTORIES:STRING=${WEBGPU_INCLUDE_DIRS}"
+      OUTPUT_VARIABLE TRY_OUT
+      )
+if(NOT ${VALID_WEBGPU})
+  message(WARNING "Can't use webgpu")
+  return()
+endif()
