--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,18 +12,8 @@ endif()
 
 add_executable(WEBGPU test.cpp ${PROJECT_SOURCE_DIR}/lib/webgpu_cpp.cpp)
 set_property(TARGET WEBGPU PROPERTY CXX_STANDARD 11)
-include_directories(${WEBGPU_INCLUDE_DIRS})
-# target_include_directories(WEBGPU PUBLIC ${WEBGPU_INCLUDE_DIRS})
+include_directories(${WEBGPU_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/lib/webgpu_cpp.cpp)
+# link_directories(${WEBGPU_LIBRARIES})
+# link_libraries(dawn_proc dawn_native dawn_wire)
 target_link_directories(WEBGPU PUBLIC ${WEBGPU_LIBRARIES})
 target_link_libraries(WEBGPU PUBLIC dawn_proc dawn_native dawn_wire )
-
-try_compile(VALID_WEBGPU
-      "${PROJECT_SOURCE_DIR}/lib"
-      "${PROJECT_SOURCE_DIR}/test.cpp"
-      CMAKE_FLAGS "-DINCLUDE_DIRECTORIES:STRING=${WEBGPU_INCLUDE_DIRS}"
-      OUTPUT_VARIABLE TRY_OUT
-      )
-if(NOT ${VALID_WEBGPU})
-  message(WARNING "Can't use webgpu")
-  return()
-endif()
