test dawn native

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ if(HAVE_WEBGPU OR WITH_WEBGPU)
 endif()
 
 add_executable(WEBGPU test.cpp ${PROJECT_SOURCE_DIR}/lib/webgpu_cpp.cpp)
-set_property(TARGET WEBGPU PROPERTY CXX_STANDARD 11)
-include_directories(${WEBGPU_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/lib/webgpu_cpp.cpp)
+set_property(TARGET WEBGPU PROPERTY CXX_STANDARD 14)
+include_directories(${WEBGPU_INCLUDE_DIRS} )
 # link_directories(${WEBGPU_LIBRARIES})
 # link_libraries(dawn_proc dawn_native dawn_wire)
 target_link_directories(WEBGPU PUBLIC ${WEBGPU_LIBRARIES})
-target_link_libraries(WEBGPU PUBLIC dawn_proc dawn_native dawn_wire )
+target_link_libraries(WEBGPU PUBLIC  dawn_utils dawn_wire dawn_proc dawn_native )
