use glslang.js compile glsl to uint_32t array

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,4 @@ include_directories(${WEBGPU_INCLUDE_DIRS} )
 # link_directories(${WEBGPU_LIBRARIES})
 # link_libraries(dawn_proc dawn_native dawn_wire)
 target_link_directories(WEBGPU PUBLIC ${WEBGPU_LIBRARIES})
-target_link_libraries(WEBGPU PUBLIC  dawn_utils dawn_wire dawn_proc dawn_native )
+target_link_libraries(WEBGPU PUBLIC  dawn_wire dawn_proc dawn_native )
